# molecular-util

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
molecular/testbed/: Matchers.cpp  Matchers.h  TestsMain.cpp
molecular/testbed/include/catch2/: catch_test_macros.hpp
molecular/util/: AtomicCounter.h  AxisAlignedBox.cpp  AxisAlignedBox.h  Blob.h  BufferInfo.h  CharacterAnimation.cpp  CharacterAnimation.h  CommandLineParser.cpp  CommandLineParser.h  DdsFile.cpp  DdsFile.h  FileStreamStorage.cpp  FileStreamStorage.h  FloatToHalf.cpp  FloatToHalf.h  GcdTaskDispatcher.cpp  GcdTaskDispatcher.h  GlConstants.h  Hash.h  HostStream.h  KtxFile.cpp  KtxFile.h  LittleEndianStream.h  Math.cpp  Math.h  Matrix.h  Matrix3.h  Matrix4.h  MemoryStreamStorage.cpp  MemoryStreamStorage.h  Mesh.h  MeshUtils.cpp  MeshUtils.h  NonCopyable.h  ObjFile.cpp  ObjFile.h  ObjFileUtils.cpp  ObjFileUtils.h  Parser.h  PixelFormat.cpp  (+22 more)
tests/: CMakeLists.txt  Matchers.cpp  TestAxisAlignedBox.cpp  TestCommandLineParser.cpp  TestFloatToHalf.cpp  TestHash.cpp  TestMath.cpp  TestMatrix.cpp  TestMatrix3.cpp  TestParser.cpp  TestQuaternion.cpp  TestSphericalHarmonics.cpp  TestStringUtils.cpp  TestVector.cpp
